# FreesoundDownloader

./: .env.local.example  .gitignore  CMakeLists.txt  README.md
include/: freesound_downloader.h
src/: freesound_downloader.cpp
tests/: test_downloader.cpp
